--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
 				</div>
 			</div>
 			<div class="table-wrapper2">
-				<div class="description">Hello My Name is Claire, I am a French Designer living in Paris. I focus on UX Design and UI Design I always try to keep a multi-disciplinary approach on all of my projects.
+				<div class="description"></br></br>Hello My Name is Claire, I am a French Designer living in Paris. I focus on UX Design and UI Design I always try to keep a multi-disciplinary approach on all of my projects.
 				</br>
 				</br>I currently work at Bannerman. I had the privilege of working with companies such as Feedly (2014), Microsoft (2012) and more.
 				</br>
-				</br>Don't hesitate to contact me for more informations.
+				</br>
 				</div>
 				<script>
 				  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
