--- a/index.html
+++ b/index.html
@@ -12,19 +12,23 @@
 	<body>
 		<div class="pao-wrapper">
 			<div class="pao-content">
-				<h1>Ux &amp; Ui Design at <a href="https://www.getbannerman.com/" target="blank">Bannerman</a></h1>
+				<div class="pao-section">
+					<h1>Ux &amp; Ui Design at <a href="https://www.getbannerman.com/" target="blank">Bannerman</a></h1>
 
-				<h2>Claire Paoletti</h2>
+					<h2>Claire Paoletti</h2>
+				</div>
 
-				<p>
-					Hello My Name is Claire, I am a French Designer living in Paris.
-					I focus on UX Design and UI Design I always try to keep a multi-disciplinary approach on all of my projects.
-					<br>
-					I currently work at Bannerman.
-					I had the privilege of working with companies such as Feedly (2014), Microsoft (2012) and more.
-				</p>
+				<div class="pao-section pao-description">
+					<p>
+						Hello My Name is Claire, I am a French Designer living in Paris.
+						I focus on UX Design and UI Design I always try to keep a multi-disciplinary approach on all of my projects.
+						<br>
+						I currently work at Bannerman.
+						I had the privilege of working with companies such as Feedly (2014), Microsoft (2012) and more.
+					</p>
+				</div>
 
-				<div class="pao-links">
+				<div class="pao-section pao-links">
 					<a target="blank" href="https://twitter.com/clairepaoletti">
 						<img src="img/twitter.png" alt="Twitter">
 					</a>
@@ -51,7 +55,9 @@
 					</a>
 				</div>
 
-				<a href="mailto:paoletticlaire@gmail.com" target="blank">Contact Me</a>
+				<div class="pao-section">
+					<a href="mailto:paoletticlaire@gmail.com" target="blank">Contact Me</a>
+				</div>
 			</div>
 		</div>
 
