impr: add animation

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 					<h2>Claire Paoletti</h2>
 				</div>
 
-				<div class="pao-section pao-description">
+				<div class="pao-section pao-description fadein">
 					<p>
 						Hello My Name is Claire, I am a French Designer living in Paris.
 						I focus on UX Design and UI Design I always try to keep a multi-disciplinary approach on all of my projects.
@@ -28,7 +28,7 @@
 					</p>
 				</div>
 
-				<div class="pao-section pao-links">
+				<div class="pao-section pao-links fadein">
 					<a target="blank" href="https://twitter.com/clairepaoletti">
 						<img src="img/twitter.png" alt="Twitter">
 					</a>
@@ -55,7 +55,7 @@
 					</a>
 				</div>
 
-				<div class="pao-section">
+				<div class="pao-section fadein">
 					<a href="mailto:paoletticlaire@gmail.com" target="blank">Contact Me</a>
 				</div>
 			</div>
