impr: facebook metadata

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 		<title>Claire Paoletti</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link rel="icon" type="image/png" href="img/favicon.png">
+
+		<meta property="og:title" content="Claire Paoletti">
+		<meta property="og:description" content="Ux & Ui Design at Bannerman">
+		<meta property="og:image" content="img/cover_facebook.png">
+		<meta property="og:url" content="http://www.clairepaoletti.com">
 	</head>
 	<body>
 		<div class="pao-wrapper">
