fix: fix facebook og:image url

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 		<meta property="og:title" content="Claire Paoletti">
 		<meta property="og:description" content="Ux & Ui Design at Bannerman">
-		<meta property="og:image" content="img/cover_facebook.png">
+		<meta property="og:image" content="http://www.clairepaoletti.com/img/cover_facebook.png">
 		<meta property="og:url" content="http://www.clairepaoletti.com">
 	</head>
 	<body>
