impr: add links and fix blank targets

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<div class="pao-wrapper">
 			<div class="pao-content">
 				<div class="pao-section">
-					<h1>Ux &amp; Ui Design at <a href="https://www.getbannerman.com/" target="blank">Bannerman</a></h1>
+					<h1>Ux &amp; Ui Design at <a href="https://www.getbannerman.com" target="_blank">Bannerman</a></h1>
 
 					<h2>Claire Paoletti</h2>
 				</div>
@@ -28,40 +28,40 @@
 						Hello My Name is Claire, I am a French Designer living in Paris.
 						I focus on UX Design and UI Design I always try to keep a multi-disciplinary approach on all of my projects.
 						<br>
-						I currently work at Bannerman.
-						I had the privilege of working with companies such as Feedly (2014), Microsoft (2012) and more.
+						I currently work at <a href="https://www.getbannerman.com" target="_blank">Bannerman</a>.
+						I had the privilege of working with companies such as <a href="http://feedly.com" target="_blank">Feedly</a> (2014), <a href="http://www.microsoft.com" target="_blank">Microsoft</a> (2012) and <a href="https://linkedin.com/in/clairepaoletti" target="_blank">more</a>.
 					</p>
 				</div>
 
 				<div class="pao-section pao-links fadein">
-					<a target="blank" href="https://twitter.com/clairepaoletti">
+					<a target="_blank" href="https://twitter.com/clairepaoletti">
 						<img src="img/twitter.png" alt="Twitter">
 					</a>
-					<a target="blank" href="https://dribbble.com/clairepaoletti">
+					<a target="_blank" href="https://dribbble.com/clairepaoletti">
 						<img src="img/dribbble.png" alt="Dribble">
 					</a>
-					<a target="blank" href="https://www.feedly.com/claire">
+					<a target="_blank" href="https://www.feedly.com/claire">
 						<img src="img/feedly.png" alt="Feedly">
 					</a>
-					<a target="blank" href="https://linkedin.com/in/clairepaoletti">
+					<a target="_blank" href="https://linkedin.com/in/clairepaoletti">
 						<img src="img/linkedin.png" alt="Linked In">
 					</a>
-					<a target="blank" href="https://medium.com/@clairepaoletti">
+					<a target="_blank" href="https://medium.com/@clairepaoletti">
 						<img src="img/medium.png" alt="Medium">
 					</a>
-					<a target="blank" href="http://pinterest.com/clairepao/">
+					<a target="_blank" href="http://pinterest.com/clairepao/">
 						<img src="img/pinterest.png" alt="Pinterest">
 					</a>
-					<a target="blank" href="https://www.behance.net/clairepaoletti">
+					<a target="_blank" href="https://www.behance.net/clairepaoletti">
 						<img src="img/behance.png" alt="Behance">
 					</a>
-					<a target="blank" href="https://instagram.com/clairepao/">
+					<a target="_blank" href="https://instagram.com/clairepao/">
 						<img src="img/instagram.png" alt="Instagram">
 					</a>
 				</div>
 
 				<div class="pao-section fadein">
-					<a href="mailto:paoletticlaire@gmail.com" target="blank">Contact Me</a>
+					<a href="mailto:paoletticlaire@gmail.com">Contact Me</a>
 				</div>
 			</div>
 		</div>
