impr: add link to nicolas website

--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
 					<a target="_blank" href="https://instagram.com/clairepao/">
 						<img src="img/instagram.png" alt="Instagram">
 					</a>
+					<a target="_blank" href="http://www.nicolasfallourd.com/">
+						<img src="img/love.png" alt="Partner">
+					</a>
 				</div>
 
 				<div class="pao-section fadein">
