impr: twitter meta tags

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link rel="icon" type="image/png" href="img/favicon.png">
 
+		<meta name="twitter:card" content="summary_large_image">
+		<meta name="twitter:site" content="@clairepaoletti">
+
 		<meta property="og:title" content="Claire Paoletti">
 		<meta property="og:description" content="Ux & Ui Design at Bannerman">
 		<meta property="og:image" content="http://www.clairepaoletti.com/img/cover_facebook.png">
