fix: heartbeat only on heart

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 						<img src="img/instagram.png" alt="Instagram">
 					</a>
 					<a target="_blank" href="http://www.nicolasfallourd.com/">
-						<img src="img/love.png" alt="Partner">
+						<img class="heartbeat" src="img/love.png" alt="Partner">
 					</a>
 				</div>
 
