--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 		<div class="pao-wrapper">
 			<div class="pao-content">
 				<div class="pao-section">
-					<h1>Ux &amp; Ui Design at <a href="https://www.getbannerman.com" target="_blank">Bannerman</a></h1>
+					<h1>Claire Paoletti</h1>
 
-					<h2>Claire Paoletti</h2>
+					<h2>Lead Designer at <a href="https://www.getbannerman.com" target="_blank">Bannerman</a></h2>
 				</div>
 
 				<div class="pao-section pao-description fadein">
