--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8">
 		<meta name="description" content="Design at Bannerman.">
-		<meta name="keywords" content=“claire, paoletti, claire paoletti, design, claire design, paoletti design, dyslexie design, bannerman design, ux design claire paoletti, ui design claire paoletti, startup claire paoletti”>
+		<meta name="keywords" content=“claire, paoletti, claire paoletti, design, claire design, paoletti design, dyslexie design, bannerman design, ux design claire paoletti, ui design claire paoletti, startup claire paoletti,claire paoletti designer, claire designer, paoletti designer”>
 		<meta id="vp" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<title>Claire Paoletti</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
