--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 				<div class="pao-section pao-description fadein">
 					<p>
-						Hello My Name is Claire, I am a French Designer living in Paris.
+						My Name is Claire, I am a French Designer living in Paris.
 						I focus on UX Design and UI Design I always try to keep a multi-disciplinary approach on all of my projects.
 						<br>
 						I currently work at <a href="https://www.getbannerman.com" target="_blank">Bannerman</a>.
