--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
 
 				<div class="pao-section fadein">
 					<a href="mailto:paoletticlaire@gmail.com">Contact Me</a>
+					<p>
+						Snapchat @clairepao
+					</p>
 				</div>
 			</div>
 		</div>
