--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						My Name is Claire, I am a French Designer living in Paris.
 						I focus on UX Design and UI Design I always try to keep a multi-disciplinary approach on all of my projects.
 						<br>
-						I currently work at <a href="https://www.bannerman.com" target="_blank">Bannerman</a>.
+						I currently work at <a href="https://www.getbannerman.com" target="_blank">Bannerman</a>.
 						I had the privilege of working with companies such as <a href="http://feedly.com" target="_blank">Feedly</a> (2014), <a href="http://www.microsoft.com" target="_blank">Microsoft</a> (2012) and <a href="https://linkedin.com/in/clairepaoletti" target="_blank">more</a>.
 					</p>
 				</div>
@@ -62,7 +62,7 @@
 					<a target="_blank" href="https://instagram.com/clairepao/">
 						<img src="img/instagram.png" alt="Instagram">
 					</a>
-					<a target="_blank" href="http://bannerman.com/">
+					<a target="_blank" href="http://getbannerman.com/">
 						<img src="img/bannerman.png" alt="Bannerman">
 					</a>
 					<a target="_blank" href="http://www.nicolasfallourd.com/">
