--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<div class="pao-section">
 					<h1>Claire Paoletti</h1>
 
-					<h2>Lead Designer at <a href="https://bannerman.com" target="_blank">Bannerman</a></h2>
+					<h2>Product Designer at <a href="https://bannerman.com" target="_blank">Bannerman</a></h2>
 				</div>
 
 				<div class="pao-section pao-description fadein">
@@ -68,13 +68,13 @@
 					<a target="_blank" href="http://www.nicolasfallourd.com/">
 						<img class="heartbeat" src="img/love.png" alt="Partner">
 					</a>
+					<a target="_blank" href="https://www.feedly.com/claire">
+						<img src="img/snap.png" alt="Snap">
+					</a>
 				</div>
 
 				<div class="pao-section fadein">
 					<a href="mailto:paoletticlaire@gmail.com">Contact Me</a>
-					<p>
-						Snapchat @clairepao
-					</p>
 				</div>
 			</div>
 		</div>
