--- a/index.html
+++ b/index.html
@@ -68,10 +68,11 @@
 					<a target="_blank" href="http://www.nicolasfallourd.com/">
 						<img class="heartbeat" src="img/love.png" alt="Partner">
 					</a>
-					<a target="_blank" href="https://www.feedly.com/claire">
+					<a target="_blank" href="https://www.instagram.com/p/BRYGB-cjpZ_/?taken-by=clairepao">
 						<img src="img/snap.png" alt="Snap">
 					</a>
 				</div>
+
 
 				<div class="pao-section fadein">
 					<a href="mailto:paoletticlaire@gmail.com">Contact Me</a>
