big changement de ouf couleur tout ça

--- a/index.html
+++ b/index.html
@@ -22,46 +22,24 @@
 		<div class="pao-wrapper">
 			<div class="pao-content">
 				<div class="pao-section">
-					<h1>Claire Paoletti</h1>
-
-					<h2>Product Designer at <a href="https://bannerman.com" target="_blank">Bannerman</a></h2>
+					<h1>Hi! My name is Claire Paoletti</h1>
+					<h2> </h2>
 				</div>
 
 				<div class="pao-section pao-description fadein">
 					<p>
-						My Name is Claire, I am a French Designer living in Paris.
+						I'm a product designer at Bannerman in Paris.
 						I focus on UX Design and UI Design I always try to keep a multi-disciplinary approach on all of my projects.
 						<br>
-						I currently work at <a href="https://bannerman.com" target="_blank">Bannerman</a>.
-						I had the privilege of working with companies such as <a href="http://feedly.com" target="_blank">Feedly</a> (2014), <a href="http://www.microsoft.com" target="_blank">Microsoft</a> (2012) and <a href="https://linkedin.com/in/clairepaoletti" target="_blank">more</a>.
+						I currently work at Bannerman.
+						I had the privilege of working with companies such as Feedly (2014), Microsoft (2012) and more.
+						<br>
+						<br>
+						You can find me here:
+						<br>
+						<a href="mailto:paoletticlaire@gmail.com">Email</a>, <a href="http://feedly.com" target="_blank">Twitter</a>, <a href="https://twitter.com/clairepaoletti" target="_blank">Dribbble</a>, <a href="https://dribbble.com/clairepaoletti" target="_blank">Medium</a>, <a href="https://linkedin.com/in/clairepaoletti" target="_blank">LinkedIn</a>, <a href="https://instagram.com/clairepao/" target="_blank">Instagram</a>
 					</p>
-				</div>
 
-				<div class="pao-section pao-links fadein">
-					<a target="_blank" href="https://twitter.com/clairepaoletti">
-						<img src="img/twitter.png" alt="Twitter">
-					</a>
-					<a target="_blank" href="https://dribbble.com/clairepaoletti">
-						<img src="img/dribbble.png" alt="Dribble">
-					</a>
-					<a target="_blank" href="https://linkedin.com/in/clairepaoletti">
-						<img src="img/linkedin.png" alt="Linked In">
-					</a>
-					<a target="_blank" href="https://medium.com/@clairepaoletti">
-						<img src="img/medium.png" alt="Medium">
-					</a>
-					<a target="_blank" href="http://pinterest.com/clairepao/">
-						<img src="img/pinterest.png" alt="Pinterest">
-					</a>
-					<a target="_blank" href="https://instagram.com/clairepao/">
-						<img src="img/instagram.png" alt="Instagram">
-					</a>
-				</div>
-
-
-				<div class="pao-section fadein">
-					<a href="mailto:paoletticlaire@gmail.com">Contact Me</a>
-				</div>
 			</div>
 		</div>
 
