--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="description" content="Design at Bannerman.">
 		<meta name="keywords" content=“claire, paoletti, claire paoletti, design, claire design, paoletti design, dyslexie design, bannerman design, ux design claire paoletti, ui design claire paoletti, startup claire paoletti,claire paoletti designer, claire designer, paoletti designer”>
 		<meta id="vp" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-		<title>Claire Paoletti</title>
+		<title>Claire Paoletti product designer</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link rel="icon" type="image/png" href="img/favicon.png">
 
@@ -22,7 +22,7 @@
 		<div class="pao-wrapper">
 			<div class="pao-content">
 				<div class="pao-section">
-					<h1>Hi! My name is Claire Paoletti</h1>
+					<h1>Hi! My name is Claire Paoletti and I design experiences.</h1>
 					<h2> </h2>
 				</div>
 
