--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 		<div class="pao-wrapper">
 			<div class="pao-content">
 				<div class="pao-section">
-					<h1>Hi! My name is Claire Paoletti and 
-					<br>I design experiences.</h1>
+					<h1>Hi! My name is Claire Paoletti and I design experiences.</h1>
 					<h2> </h2>
 				</div>
 
