--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 
 				<div class="pao-section pao-description fadein">
 					<p>
-						I'm a product designer at Bannerman in Paris.
+						I'm a product designer at Chouette Famille in Paris.
 						I focus on UX Design and UI Design I always try to keep a multi-disciplinary approach on all of my projects.
 						<br>
-						I currently work at Bannerman.
-						I had the privilege of working with companies such as Feedly (2014), Microsoft (2012) and more.
+						I currently work at Chouette Famille.
+						I had the privilege of working with companies such as Bannerman(2019), Feedly (2014), Microsoft (2012) and more.
 						<br>
 						<br>
 						You can find me here:
