--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						<br>
 						I focus on UX Design and UI Design I always try to keep a multi-disciplinary approach on all of my projects.
 						<br>
-						I currently work at <a href="https://www.chouettefamille.fr/">Chouette Famille</a>.
+						I currently work at Chouette Famille.
 						I had the privilege of working with companies such as Bannerman(2019), Feedly (2014), Microsoft (2012) and more.
 						<br>
 						<br>
