css by Vivien superhéro

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<meta property="og:description" content="Ux & Ui Design at Bannerman">
 		<meta property="og:image" content="http://www.clairepaoletti.com/img/cover_facebook.png">
 		<meta property="og:url" content="http://www.clairepaoletti.com">
+		<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 		<script>
 			window['_fs_debug'] = false;
 			window['_fs_host'] = 'fullstory.com';
@@ -42,7 +43,7 @@
 					<h1>Hi! My name is Claire Paoletti and I design experiences.</h1>
 				</div>
 
-				<div class="pao-section pao-description fadein">
+				<div class="pao-section pao-description">
 					<p>
 						I'm a product designer at <a href="https://www.chouettefamille.fr/">Chouette Famille</a> in Paris.
 						<br>
