--- a/index.html
+++ b/index.html
@@ -40,16 +40,15 @@
 		<div class="pao-wrapper">
 			<div class="pao-content">
 				<div class="pao-section">
-					<h1>Hi! My name is Claire Paoletti and I design experiences.</h1>
+					<h1>Hi! 
+						<br>
+						My name is Claire Paoletti and I design experiences.</h1>
 				</div>
 
 				<div class="pao-section pao-description">
 					<p>
-						I'm a product designer at <a href="https://www.chouettefamille.fr/">Chouette Famille</a> in Paris.
+						I'm a co-founder at <a href="https://www.chouettefamille.fr/">Chouette Famille</a> in Paris.
 						<br>
-						I focus on UX Design and UI Design I always try to keep a multi-disciplinary approach on all of my projects.
-						<br>
-						I currently work at Chouette Famille.
 						I had the privilege of working with companies such as Bannerman (2019), Feedly (2014), Microsoft (2012) and more.
 						<br>
 						<br>
