--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 				<div class="pao-section pao-description">
 					<p>
-						I'm a co-founder at <a href="https://www.chouettefamille.fr/">Chouette Famille</a> in Paris.
+						I'm one of the <a href="https://www.chouettefamille.fr/">Chouette Famille</a> co-founder in Paris.
 						<br>
 						I had the privilege of working with companies such as Bannerman (2019), Feedly (2014), Microsoft (2012) and more.
 						<br>
