--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 						<br>
 						<a href="mailto:paoletticlaire@gmail.com">Email</a>, <a href="https://twitter.com/clairepaoletti" target="_blank">Twitter</a>, <a href="https://dribbble.com/clairepaoletti" target="_blank">Dribbble</a>, <a href="https://medium.com/@clairepaoletti" target="_blank">Medium</a>, <a href="https://linkedin.com/in/clairepaoletti" target="_blank">LinkedIn</a>, <a href="https://instagram.com/clairepao/" target="_blank">Instagram</a>
 					</p>
-					<div class="lottie-animation">
+					<div id="lottie-animation">
 					</div>
 			</div>
 		</div>
