--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 				<div class="pao-section pao-description">
 					<p>
-						I'm one of the <a href="https://www.chouettefamille.fr/">Chouette Famille</a> co-founder in Paris.
+						I'm one of the <a href="https://www.joliefamily.fr/">joliefamily</a> co-founder in Paris.
 						<br>
 						I had the privilege of working with companies such as Bannerman (2019), Feedly (2014), Microsoft (2012) and more.
 						<br>
@@ -71,7 +71,7 @@
 		  ga('create', 'UA-66421910-1', 'auto');
 		  ga('send', 'pageview');
 		</script>
-		<script> 
+		<//script> 
 		window.addEventListener('load', function() {
 			lottie.loadAnimation({
 			container: document.getElementById('lottie-animation'),
