--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
 
 				<div class="pao-section pao-description">
 					<p>
-						I'm one of the <a href="https://www.joliefamily.fr/">joliefamily</a> co-founder in Paris.
+						I'm Product Designer at <a href="https://www.castordoc.com/">Castor</a> in Paris.
+						Data people spend too much time trying to find and understand the data they have. We are building a tool, inspired by tech giant internal tools (Uber’s Databook, Airbnb’s Data Portal, Lyft’s Amundsen …), to redesign how companies document their data.
+
+It's a plug & play, collaborative data discovery solution designed for scale-ups.
 						<br>
 						I had the privilege of working with companies such as Bannerman (2019), Feedly (2014), Microsoft (2012) and more.
 						<br>
