--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8">
 		<meta name="description" content="Design at Bannerman.">
-		<meta name="keywords" content=“claire, paoletti, claire paoletti, design, claire design, paoletti design, dyslexie design, bannerman design, ux design claire paoletti, ui design claire paoletti, startup claire paoletti,claire paoletti designer, claire designer, paoletti designer”>
+		<meta name="keywords" content=“claire, paoletti, claire paoletti, claire paoletti product designer, claire paoletti livre, design, claire design, claire paoletti titeuf, paoletti design, dyslexie design, bannerman design, ux design claire paoletti, ui design claire paoletti, startup claire paoletti,claire paoletti designer, claire designer, paoletti designer”>
 		<meta id="vp" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<title>Claire Paoletti product designer</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -41,20 +41,20 @@
 		<div class="pao-wrapper">
 			<div class="pao-content">
 				<div class="pao-section">
-					<h1>Hi! 
-						<br>
-						My name is Claire Paoletti and I design experiences.</h1>
+					<h1>Claire Paoletti</h1>
+					<h2>Senior Product Designer</h2>
 				</div>
 
 				<div class="pao-section pao-description">
 					<p>
 						I'm Product Designer at <a href="https://www.castordoc.com/">Castor</a> in Paris.
 						<br>
+						<br>
+						<br>
 						Data people spend too much time trying to find and understand the data they have. We are building a tool, inspired by tech giant internal tools (Uber’s Databook, Airbnb’s Data Portal, Lyft’s Amundsen …), to redesign how companies document their data.
 
 It's a plug & play, collaborative data discovery solution designed for scale-ups.
 						<br>
-						I had the privilege of working with companies such as Bannerman (2019), Feedly (2014), Microsoft (2012) and more.
 						<br>
 						<br>
 						You can find me here:
