--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<link rel="icon" type="image/png" href="img/favicon.png">
 
 		<meta name="twitter:card" content="summary_large_image">
-		<meta name="twitter:site" content="@clairepaoletti">
+		<meta name="twitter:site" content="@clairepao">
 
 		<meta property="og:title" content="Claire Paoletti">
 		<meta property="og:description" content="Ux & Ui Design at Bannerman">
@@ -47,7 +47,7 @@
 
 				<div class="pao-section pao-description">
 					<p>
-						I'm Product Designer at <a href="https://www.castordoc.com/">Castor</a> in Paris.
+						I'm Product Designer at <a href="https://www.castordoc.com/"><bold>Castor</bold></a> in Paris.
 						<br>
 						<br>
 						<br>
@@ -59,7 +59,7 @@ It's a plug & play, collaborative data discovery solution designed for scale-ups
 						<br>
 						You can find me here:
 						<br>
-						<a href="mailto:paoletticlaire@gmail.com">Email</a>, <a href="https://twitter.com/clairepaoletti" target="_blank">Twitter</a>, <a href="https://dribbble.com/clairepaoletti" target="_blank">Dribbble</a>, <a href="https://medium.com/@clairepaoletti" target="_blank">Medium</a>, <a href="https://linkedin.com/in/clairepaoletti" target="_blank">LinkedIn</a>, <a href="https://instagram.com/clairepao/" target="_blank">Instagram</a>
+						<a href="mailto:paoletticlaire@gmail.com">Email</a>, <a href="https://twitter.com/clairepao" target="_blank">Twitter</a>, <a href="https://dribbble.com/clairepaoletti" target="_blank">Dribbble</a>, <a href="https://medium.com/@clairepaoletti" target="_blank">Medium</a>, <a href="https://linkedin.com/in/clairepaoletti" target="_blank"><bold>LinkedIn</bold></a>, <a href="https://instagram.com/clairepao/" target="_blank">Instagram</a>
 					</p>
 					<div id="lottie-animation">
 					</div>
