--- a/index.html
+++ b/index.html
@@ -1,79 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<meta http-equiv="content-type" content="text/html; charset=utf-8">
-		<meta name="description" content="Design at Bannerman.">
-		<meta name="keywords" content=“claire, paoletti, claire paoletti, claire paoletti product designer, claire paoletti livre, design, claire design, claire paoletti titeuf, paoletti design, dyslexie design, bannerman design, ux design claire paoletti, ui design claire paoletti, startup claire paoletti,claire paoletti designer, claire designer, paoletti designer”>
-		<meta id="vp" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-		<title>Claire Paoletti product designer</title>
-		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<link rel="icon" type="image/png" href="img/favicon.png">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <meta name="description" content="Design at Bannerman.">
+    <meta name="keywords" content="claire, paoletti, claire paoletti, claire paoletti product designer, claire paoletti livre, design, claire design, claire paoletti titeuf, paoletti design, dyslexie design, bannerman design, ux design claire paoletti, ui design claire paoletti, startup claire paoletti,claire paoletti designer, claire designer, paoletti designer">
+    <meta id="vp" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <title>Claire Paoletti product designer</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="icon" type="image/png" href="img/favicon.png">
 
-		<meta name="twitter:card" content="summary_large_image">
-		<meta name="twitter:site" content="@clairepao">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@clairepao">
 
-		<meta property="og:title" content="Claire Paoletti">
-		<meta property="og:description" content="Ux & Ui Design at Bannerman">
-		<meta property="og:url" content="http://www.clairepaoletti.com">
-		<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-		<script>
-			window['_fs_debug'] = false;
-			window['_fs_host'] = 'fullstory.com';
-			window['_fs_org'] = 'KTA6E';
-			window['_fs_namespace'] = 'FS';
-			(function(m,n,e,t,l,o,g,y){
-				if (e in m) {if(m.console && m.console.log) { m.console.log('FullStory namespace conflict. Please set window["_fs_namespace"].');} return;}
-				g=m[e]=function(a,b,s){g.q?g.q.push([a,b,s]):g._api(a,b,s);};g.q=[];
-				o=n.createElement(t);o.async=1;o.crossOrigin='anonymous';o.src='https://'+_fs_host+'/s/fs.js';
-				y=n.getElementsByTagName(t)[0];y.parentNode.insertBefore(o,y);
-				g.identify=function(i,v,s){g(l,{uid:i},s);if(v)g(l,v,s)};g.setUserVars=function(v,s){g(l,v,s)};g.event=function(i,v,s){g('event',{n:i,p:v},s)};
-				g.shutdown=function(){g("rec",!1)};g.restart=function(){g("rec",!0)};
-				g.consent=function(a){g("consent",!arguments.length||a)};
-				g.identifyAccount=function(i,v){o='account';v=v||{};v.acctId=i;g(o,v)};
-				g.clearUserCookie=function(){};
-			})(window,document,window['_fs_namespace'],'script','user');
-			</script>
-			<script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.5.2/lottie.min.js" type="text/javascript">
-			</script>
-	</head>
-	<body>
-		<div class="pao-wrapper">
-			<div class="pao-content">
-				<div class="pao-section">
-					<h1>Claire Paoletti</h1>
-					<h2>Senior Product Designer</h2>
-				</div>
+    <meta property="og:title" content="Claire Paoletti">
+    <meta property="og:description" content="Ux & Ui Design at Bannerman">
+    <meta property="og:url" content="http://www.clairepaoletti.com">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <script>
+        // FullStory script
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.5.2/lottie.min.js" type="text/javascript"></script>
+</head>
+<body>
+    <div class="pao-wrapper">
+        <div class="pao-content">
+            <div class="pao-section">
+                <h1>Claire Paoletti</h1>
+                <h2>Senior Product Designer</h2>
+            </div>
 
-				<div class="pao-section pao-description">
-					<p>
-						I'm Product Designer at <a href="https://www.castordoc.com/"><bold>Castor</bold></a> in Paris.
-						<br>
-						<br>
-						<br>
-						Data people spend too much time trying to find and understand the data they have. We are building a tool, inspired by tech giant internal tools (Uber’s Databook, Airbnb’s Data Portal, Lyft’s Amundsen …), to redesign how companies document their data.
-
-It's a plug & play, collaborative data discovery solution designed for scale-ups.
-						<br>
-						<br>
-						<br>
-						You can find me here:
-						<br>
-						<a href="mailto:paoletticlaire@gmail.com">Email</a>, <a href="https://twitter.com/clairepao" target="_blank">Twitter</a>, <a href="https://dribbble.com/clairepaoletti" target="_blank">Dribbble</a>, <a href="https://medium.com/@clairepaoletti" target="_blank">Medium</a>, <a href="https://linkedin.com/in/clairepaoletti" target="_blank"><bold>LinkedIn</bold></a>, <a href="https://instagram.com/clairepao/" target="_blank">Instagram</a>
-					</p>
-					<div id="lottie-animation">
-					</div>
-			</div>
-		</div>
-
-		<script>
-		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-		  ga('create', 'UA-66421910-1', 'auto');
-		  ga('send', 'pageview');
-		</script>
-	</body>
-</html>
+            <div class="pao-section pao-description">
+                <p>
+                    I'm Product Designer at <a href="https://www.castordoc.com/" target="_blank"><strong>Castor</strong></a> in Paris.
+                </p>
+                <p>
+                    Data people spend too much time trying to find and understand the data they have. We are building a tool, inspired by tech giant internal tools (Uber’s Databook, Airbnb’s Data Portal, Lyft’s Amundsen …), to redesign how companies document their data.
+                </p>
+                <p>
+                    It's a plug & play, collaborative data discovery solution designed for scale-ups.
+                </p>
+                <p>
+                    You can find me here:
+                </p>
+                <p>
+                    <a href="mailto:paoletticlaire@gmail.com">Email</a>, <a href="https://twitter.com/clairepao" target="_blank">Twitter</a>, <a href="https://dribbble.com/clairepaoletti" target="_blank">Dribbble</a>, <a href="https://medium.com/@clairepaoletti" target="_blank">Medium</a>, <a href="https://linkedin
