--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         // FullStory script
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.5.2/lottie.min.js" type="text/javascript"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/rss-parser/3.10.0/rss-parser.min.js"></script>
 </head>
 <body>
     <div class="pao-wrapper">
@@ -45,39 +46,35 @@
                 </p>
                 <p>
                     <a href="mailto:paoletticlaire@gmail.com">Email</a>, <a href="https://twitter.com/clairepao" target="_blank">Twitter</a>, <a href="https://dribbble.com/clairepaoletti" target="_blank">Dribbble</a>, <a href="https://medium.com/@clairepaoletti" target="_blank">Medium</a>, <a href="https://linkedin
-<script src="https://cdnjs.cloudflare.com/ajax/libs/rss-parser/3.10.0/rss-parser.min.js"></script>
-<div class="medium-articles"></div>
-<script>
-  // Create a new RSS Parser instance
-  const parser = new RSSParser();
 
-  // Your Medium RSS feed URL
-  const feedUrl = 'https://medium.com/feed/@clairepaoletti';
 
-  // Fetch and parse the RSS feed
-  parser.parseURL(feedUrl, (err, feed) => {
-    if (err) {
-      console.error('Error fetching Medium articles:', err);
-      return;
-    }
+					// medium
+					<div class="medium-articles"></div>
+					<script>
+					// Create a new RSS Parser instance
+					const parser = new RSSParser();
+					// Your Medium RSS feed URL
+					const feedUrl = 'https://medium.com/feed/@clairepaoletti';
+					// Fetch and parse the RSS feed
+					 parser.parseURL(feedUrl, (err, feed) => {
+						 if (err) {
+							 console.error('Error fetching Medium articles:', err);
+							  return;
+							}
+							const mediumArticles = document.querySelector('.medium-articles');
+							// Loop through the articles and display them
+							feed.items.forEach(item => {
+								const article = document.createElement('div');
+								article.classList.add('medium-article');
 
-    const mediumArticles = document.querySelector('.medium-articles');
-
-    // Loop through the articles and display them
-    feed.items.forEach(item => {
-      const article = document.createElement('div');
-      article.classList.add('medium-article');
-
-      const title = document.createElement('h3');
-      title.innerHTML = `<a href="${item.link}" target="_blank">${item.title}</a>`;
-
-      const date = document.createElement('p');
-      date.classList.add('medium-article-date');
-      date.textContent = new Date(item.pubDate).toLocaleDateString();
-
-      article.appendChild(title);
-      article.appendChild(date);
-      mediumArticles.appendChild(article);
-    });
-  });
-</script>
+								const title = document.createElement('h3');
+								 title.innerHTML = `<a href="${item.link}" target="_blank">${item.title}</a>`;
+								 const date = document.createElement('p');
+								 date.classList.add('medium-article-date');
+								 date.textContent = new Date(item.pubDate).toLocaleDateString();
+								 article.appendChild(title);
+								 article.appendChild(date);
+								 mediumArticles.appendChild(article);
+								});
+								});
+								</script>
