--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="pao-content">
             <div class="pao-section">
                 <h1>Claire Paoletti</h1>
-                <h2>Lead Designer & Product Manager with a Twist of Humor</h2>
+                <h2>Lead Designer & Product Manager</h2>
             </div>
 
             <div class="pao-section pao-description">
@@ -47,6 +47,7 @@
                 <p>
                     <a href="mailto:paoletticlaire@gmail.com">Email</a>, <a href="https://twitter.com/clairepao" target="_blank">Twitter</a>, <a href="https://dribbble.com/clairepaoletti" target="_blank">Dribbble</a>, <a href="https://medium.com/@clairepaoletti" target="_blank">Medium</a>, and <a href="https://www.linkedin.com/in/clairepaoletti/" target="_blank">LinkedIn</a>.
 				</p>
+				<p>Psst! Are you looking for another Claire Paoletti? If you're seeking the talented Author and Producer at PICOLO PICTURES, you've stumbled upon the wrong Claire. Don't worry, you can easily reach out to her by <a href="mailto:claire.paoletti@gmail.com">sending an email</a>!</p>
 			</div>
 	
 			<div class="medium-articles"></div>
