--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
                 <p>
                     <a href="mailto:paoletticlaire@gmail.com">Email</a>, <a href="https://twitter.com/clairepao" target="_blank">Twitter</a>, <a href="https://dribbble.com/clairepaoletti" target="_blank">Dribbble</a>, <a href="https://medium.com/@clairepaoletti" target="_blank">Medium</a>, and <a href="https://www.linkedin.com/in/clairepaoletti/" target="_blank">LinkedIn</a>.
 				</p>
-				<p>Psst! Are you looking for another Claire Paoletti? If you're seeking the talented Author and Producer at PICOLO PICTURES, you've stumbled upon the wrong Claire. Don't worry, you can easily reach out to her by <a href="mailto:claire.paoletti@gmail.com">sending an email</a>!</p>
+				<p>Psst! Are you looking for another Claire Paoletti? If you're seeking the talented Author and Producer at PICOLO PICTURES, you've stumbled upon the wrong Claire. Don't worry, you can easily reach out to her by <a href="mailto:claire.paoletti@gmail.com">sending an email</a>!
+				</p>
 			</div>
 	
 			<div class="medium-articles"></div>
