--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Design at Bannerman.">
     <meta name="keywords" content="claire, paoletti, claire paoletti, claire paoletti product designer, claire paoletti livre, design, claire design, claire paoletti titeuf, paoletti design, dyslexie design, bannerman design, ux design claire paoletti, ui design claire paoletti, startup claire paoletti,claire paoletti designer, claire designer, paoletti designer">
     <meta id="vp" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Claire Paoletti Lead Designer & Product Manager</title>
+    <title>Claire Paoletti product designer</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="icon" type="image/png" href="img/favicon.png">
 
@@ -17,42 +17,39 @@
     <meta property="og:description" content="Ux & Ui Design at Bannerman">
     <meta property="og:url" content="http://www.clairepaoletti.com">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <script>
-        // FullStory script
-    </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.5.2/lottie.min.js" type="text/javascript"></script>
-    <script src="https://cdn.jsdelivr.net/npm/rss-parser@3.10.0/dist/rss-parser.min.js"></script>
+    <!-- Add your other scripts here -->
 </head>
 <body>
     <div class="pao-wrapper">
         <div class="pao-content">
             <div class="pao-section">
                 <h1>Claire Paoletti</h1>
-                <h2>Lead Designer & Product Manager</h2>
+                <h2>Lead Designer and PM</h2>
             </div>
 
             <div class="pao-section pao-description">
                 <p>
-                    I'm the fun-loving Lead Designer and Product Manager at <a href="https://www.castordoc.com/" target="_blank"><strong>Castor</strong></a> in Paris, where creativity meets data.
+                    Hey there! I'm Claire Paoletti, the fun-loving Lead Designer and PM at Castor, Paris.
                 </p>
                 <p>
-                    Navigating the treacherous seas of data can be quite the adventure, and that's where we come in! Our crew at Castor is crafting a tool inspired by the swashbuckling internal tools of tech giants like Uber's Databook, Airbnb's Data Portal, and Lyft's Amundsen.
+                    I help data enthusiasts stop pulling their hair out by creating an awesome tool inspired by the likes of Uber’s Databook, Airbnb’s Data Portal, and Lyft’s Amundsen. Our solution makes documenting data as easy as pie (and who doesn't love pie? 🥧)!
                 </p>
                 <p>
-                    Ahoy, matey! Our solution is a plug-and-play, collaborative data discovery platform custom-made for scale-ups, making data documentation as smooth as sailing on calm waters.
+                    Don't be shy, let's connect:
                 </p>
                 <p>
-                    Ready to join the fun? Connect with me through:
+                    <a href="mailto:paoletticlaire@gmail.com">Email</a>, <a href="https://twitter.com/clairepao" target="_blank">Twitter</a>, <a href="https://dribbble.com/clairepaoletti" target="_blank">Dribbble</a>, <a href="https://medium.com/@clairepaoletti" target="_blank">Medium</a>, <a href="https://linkedin.com/in/clairepaoletti" target="_blank">LinkedIn</a>, <a href="https://instagram.com/clairepao/" target="_blank">Instagram</a>
                 </p>
-                <p>
-                    <a href="mailto:paoletticlaire@gmail.com">Email</a>, <a href="https://twitter.com/clairepao" target="_blank">Twitter</a>, <a href="https://dribbble.com/clairepaoletti" target="_blank">Dribbble</a>, <a href="https://medium.com/@clairepaoletti" target="_blank">Medium</a>, and <a href="https://www.linkedin.com/in/clairepaoletti/" target="_blank">LinkedIn</a>.
+                <br>
+                <br>
+                <br>
+                <p style="opacity: 0.5;">
+					Looking for Claire Paoletti, the author and producer at Picolo Pictures? <a href="mailto:claire.paoletti@gmail.com" style="opacity: 0.5;">Click here to email her.</a>
 				</p>
-				<p>Psst! Are you looking for another Claire Paoletti? If you're seeking the talented Author and Producer at PICOLO PICTURES, you've stumbled upon the wrong Claire. Don't worry, you can easily reach out to her by <a href="mailto:claire.paoletti@gmail.com">sending an email</a>!
-				</p>
-			</div>
-	
-			<div class="medium-articles"></div>
-		</div>
-	</div>
-</body>
-</html>
+				</div>
+				<!-- Add your other HTML elements here -->
+				</div>
+				</div>
+				</body>
+				</html>
+				
