--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <br>
                 <br>
                 <p style="opacity: 0.5;">
-					Looking for Claire Paoletti, the author and producer at Picolo Pictures? <a href="mailto:claire.paoletti@gmail.com" style="opacity: 0.5;">Click here to email her.</a>
+					Psst! Are you looking for another Claire Paoletti? The Author and Producer extraordinaire at PICOLO PICTURES can be found <a href="mailto:claire.paoletti@gmail.com" style="opacity: 0.5;">right here</a>! Drop her a line, she's awesome!
 				</p>
 				</div>
 				<!-- Add your other HTML elements here -->
