--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <meta property="og:description" content="Ux & Ui Design at Bannerman">
     <meta property="og:url" content="http://www.clairepaoletti.com">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5/1en4ADpAiLA7h1b1f8y8kP2/bQf//jj4oxf/png" crossorigin="anonymous">
     <!-- Add your other scripts here -->
 </head>
 <body>
@@ -38,6 +39,14 @@
                     Don't be shy, let's connect:
                 </p>
                 <p>
+					<div class="social-links">
+						<a href="mailto:paoletticlaire@gmail.com" target="_blank"><i class="fas fa-envelope"></i> Email</a>
+						<a href="https://twitter.com/clairepao" target="_blank"><i class="fab fa-twitter"></i> Twitter</a>
+						<a href="https://dribbble.com/clairepaoletti" target="_blank"><i class="fab fa-dribbble"></i> Dribbble</a>
+						<a href="https://medium.com/@clairepaoletti" target="_blank"><i class="fab fa-medium"></i> Medium</a>
+						<a href="https://linkedin.com/in/clairepaoletti" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
+						<a href="https://instagram.com/clairepao/" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
+					</div>					
                     <a href="mailto:paoletticlaire@gmail.com">Email</a>, <a href="https://twitter.com/clairepao" target="_blank">Twitter</a>, <a href="https://dribbble.com/clairepaoletti" target="_blank">Dribbble</a>, <a href="https://medium.com/@clairepaoletti" target="_blank">Medium</a>, <a href="https://linkedin.com/in/clairepaoletti" target="_blank">LinkedIn</a>, <a href="https://instagram.com/clairepao/" target="_blank">Instagram</a>
                 </p>
                 <br>
