--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <br>
                 <br>
                 <p style="opacity: 0.5;">
-					Psst! Are you looking for another Claire Paoletti? The Author and Producer extraordinaire at PICOLO PICTURES can be found <a href="mailto:claire.paoletti@gmail.com" style="opacity: 0.5;">right here</a>! Drop her a line, she's awesome!
+					👉 Psst! Are you looking for another Claire Paoletti? The Author and Producer extraordinaire at PICOLO PICTURES can be found <a href="mailto:claire.paoletti@gmail.com" style="opacity: 0.5;">right here</a>!
 				</p>
 				</div>
 				<!-- Add your other HTML elements here -->
