--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
                 </p>
                 <p>
 					<div class="social-links">
-						<a href="mailto:paoletticlaire@gmail.com" target="_blank"><i class="fas fa-envelope"></i> Email</a>
-						<a href="https://twitter.com/clairepao" target="_blank"><i class="fab fa-twitter"></i> Twitter</a>
-						<a href="https://dribbble.com/clairepaoletti" target="_blank"><i class="fab fa-dribbble"></i> Dribbble</a>
-						<a href="https://medium.com/@clairepaoletti" target="_blank"><i class="fab fa-medium"></i> Medium</a>
-						<a href="https://linkedin.com/in/clairepaoletti" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
+						<a href="mailto:paoletticlaire@gmail.com" target="_blank"><i class="fas fa-envelope"></i> Email</a>,
+						<a href="https://twitter.com/clairepao" target="_blank"><i class="fab fa-twitter"></i> Twitter</a>,
+						<a href="https://dribbble.com/clairepaoletti" target="_blank"><i class="fab fa-dribbble"></i> Dribbble</a>,
+						<a href="https://medium.com/@clairepaoletti" target="_blank"><i class="fab fa-medium"></i> Medium</a>,
+						<a href="https://linkedin.com/in/clairepaoletti" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>, or
 						<a href="https://instagram.com/clairepao/" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
 					</div>					
                 </p>
