--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
             <div class="pao-section pao-description">
                 <p>
-                    Hey there! I'm Claire Paoletti, the fun-loving Lead Designer and PM at Castor, Paris.
+                    Hey there! I'm Claire Paoletti, the fun-loving Lead Designer and PM at <a href="https://www.castordoc.com/">Castor</a>, Paris.
                 </p>
                 <p>
                     I help data enthusiasts stop pulling their hair out by creating an awesome tool inspired by the likes of Uber’s Databook, Airbnb’s Data Portal, and Lyft’s Amundsen. Our solution makes documenting data as easy as pie (and who doesn't love pie? 🥧)!
