--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 					</div>					
                 </p>
                 <br>
+				<a href="https://twitter.com/clairepao" target="_blank"><img src="https://img.shields.io/twitter/follow/clairepao?style=social"></a>
                 <br>
                 <br>
                 <p style="opacity: 0.5;">
