--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <meta name="description" content="Design at Bannerman.">
+    <meta name="description" content="Design at castordoc.">
     <meta name="keywords" content="claire, paoletti, claire paoletti, claire paoletti product designer, claire paoletti livre, design, claire design, claire paoletti titeuf, paoletti design, dyslexie design, bannerman design, ux design claire paoletti, ui design claire paoletti, startup claire paoletti,claire paoletti designer, claire designer, paoletti designer">
     <meta id="vp" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Claire Paoletti product designer</title>
@@ -14,7 +14,7 @@
     <meta name="twitter:site" content="@clairepao">
 
     <meta property="og:title" content="Claire Paoletti">
-    <meta property="og:description" content="Ux & Ui Design at Bannerman">
+    <meta property="og:description" content="Lead designer at castordoc">
     <meta property="og:url" content="http://www.clairepaoletti.com">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5/1en4ADpAiLA7h1b1f8y8kP2/bQf//jj4oxf/png" crossorigin="anonymous">
