--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <br>
                 <br>
                 <p style="opacity: 0.5;">
-					👉 Psst! Are you looking for another Claire Paoletti? The Author and Producer extraordinaire at PICOLO PICTURES can be found <a href="mailto:claire.paoletti@gmail.com" style="opacity: 0.5;">right here</a>!
+					👉 Psst! Are you looking for another Claire Paoletti? The Author and Producer extraordinaire at PICOLO PICTURES can be found <a href="mailto:claire.paoletti@gmail.com">right here</a>!
 				</p>
 				</div>
 				<!-- Add your other HTML elements here -->
